# cpu6502

./: .gitignore  CMakeLists.txt  a.out  disassembler_file.txt  main.c
inc/: bus.h  cpu6502.h  instruction.h  memory.h  opcode.h  system.h
src/: bus.c  cpu6502.c  instruction.c  memory.c  opcode.c  system.c
test/: test_ins.h  test_mem.h  test_status_reg.h
